<resources>
    <string name="app_name">Moment It Up</string>
    <string name="seekbar_text">Rate your happiness level</string>
    <string name="date">today</string>
    <string name="display_moment">write down your happy moment in just one sentence</string>
    <string name="image">+</string>
    <string name="send">send</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="auth_failed">Failed to login</string>

    <!--Strings related to action bar-->
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>

    <!--Strings in profile activity-->
    <string name="arrow">>></string>
    <string name="quote">Be happy and a reason will come along</string>

    <!--Strings in setting activity-->
    <string name="setting_name">Name</string>
    <string name="setting_email">Email</string>


    <!--Strings in checkbox layout-->
    <string name="food">Food</string>
    <string name="family">Family</string>
    <string name="books">Book</string>
    <string name="friends">Friends</string>
    <string name="music">Music</string>
    <string name="travel">Travel</string>
    <string name="outdoor">Outdoor</string>
    <string name="movie">Movie</string>
    <string name="dinner">Dinner</string>
    <string name="summer">Summer</string>
    <string name="study">Study</string>
    <string name="garden">Garden</string>
    <string name="seattle">Seattle</string>
    <string name="volunteer">Volunteer</string>
    <string name="solitude">Solitude</string>
    <string name="ada">Ada</string>
    <string name="peace">Peace</string>

    <!--Strings in top moments-->
    <string name="top_moments">Top 5 Happy Tags</string>
    <string name="word_cloud">Word Cloud</string>
    <string name="history">History</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="name">name</string>
    <string name="email">email</string>

    <!--Strings in history screen-->
    <string name="history_moments">Happy Moments</string>

</resources>
