<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/checkbox_list"
        android:layout_width="match_parent"
        android:layout_height="549dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/choose_tag"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/family_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family" />

        <CheckBox
            android:id="@+id/friends_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends" />

        <CheckBox
            android:id="@+id/food_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <CheckBox
            android:id="@+id/books_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/books" />

        <CheckBox
            android:id="@+id/travel_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/travel" />

        <CheckBox
            android:id="@+id/outdoor_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outdoor" />

        <CheckBox
            android:id="@+id/movie_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie" />

        <CheckBox
            android:id="@+id/music_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <CheckBox
            android:id="@+id/summe_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summer" />

        <CheckBox
            android:id="@+id/home_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home" />


        <CheckBox
            android:id="@+id/seattle_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seattle" />

        <CheckBox
            android:id="@+id/study_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/study" />

        <CheckBox
            android:id="@+id/garden_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garden" />

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="goBackHome"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

</android.support.constraint.ConstraintLayout>