<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:id="@+id/home_btn">
    </item>

    <item
        android:title="@string/profile"
        app:showAsAction="always"
        android:icon="@drawable/ic_account"
        android:id="@+id/profile_btn">
    </item>

    <item
        android:id="@+id/info_btn"
        android:icon="@drawable/ic_info"
        android:title="@string/info"
        app:showAsAction="always"></item>

    <item
        android:title="@string/log_out"
        app:showAsAction="never"
        android:id="@+id/log_out">
    </item>

</menu>