<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_date_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textSize="30sp"
                    android:inputType="datetime"
                    android:labelFor="@+id/text_date_field"
                    android:hint="@string/date"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/text_display_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="40dp"
                    android:text="@string/seekbar_text"
                    android:textSize="12sp" />

                <SeekBar
                    android:id="@+id/seek_bar_rate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:max="10"
                    android:paddingEnd="40dp"
                    android:paddingStart="40dp"
                    android:paddingTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/check_boxes"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="40dp">

                <CheckBox
                    android:id="@+id/box_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family" />

                <CheckBox
                    android:id="@+id/box_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food" />

                <CheckBox
                    android:id="@+id/box_books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/books" />

                <Button
                    android:id="@+id/more_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goToMoreCheckbox"
                    android:text="more"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <ImageView
                android:id="@+id/photo_view"
                android:layout_width="80dp"
                android:layout_height="70dp" />


            <EditText
                android:id="@+id/text_moment"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingStart="40dp"
                android:text="@string/display_moment"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="15sp" />
        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/photo_picker_btn"
                    android:layout_width="79dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/image" />

                <Button
                    android:id="@+id/send_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="send" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>